# chinese-mnist-with-pytorch-lightning-resnet

./: Chinese_MNIST_with_pytorch_lightning_and_Resnet.ipynb  LICENSE  README.md  dataset.py  model.py  pyproject.toml
